--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -5,9 +5,13 @@
    "metadata": {},
    "source": [
     "# 1 图像部分\n",
-    "- grab_screen.py (屏幕图像抓取)\n",
-    "- get_vertices.py (顶点位置获取)\n",
-    "- get_status.py (状态获取)"
+    "- pysekiro\n",
+    "    - img_tools\n",
+    "        - \\__init__.py\n",
+    "            - adjustment.py (游戏窗口校准)\n",
+    "            - get_status.py (状态获取)\n",
+    "            - get_vertices.py (顶点位置获取)\n",
+    "            - grab_screen.py (屏幕图像抓取)"
    ]
   },
   {
@@ -21,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [grab_screen.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/grab_screen.py)"
+    "查看代码 [grab_screen.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/grab_screen.py)"
    ]
   },
   {
@@ -44,21 +48,11 @@
     "追加了以下内容\n",
     "~~~python\n",
     "# 游戏窗口大小\n",
-    "GAME_WIDTH = 1280\n",
-    "GAME_HEIGHT = 720\n",
-    "\n",
-    "# 标准窗口大小\n",
-    "STANDARD_WIDTH = 480\n",
-    "STANDARD_HEIGHT = 270\n",
-    "\n",
-    "FRAME_COUNT = 1\n",
+    "GAME_WIDTH = 800\n",
+    "GAME_HEIGHT = 450\n",
     "\n",
     "def get_screen():\n",
-    "    # 屏幕捕获，并图像缩放\n",
-    "    screen = grab_screen(region=(0, 30, GAME_WIDTH, GAME_HEIGHT+30))\n",
-    "    screen = cv2.resize(screen, (STANDARD_WIDTH, STANDARD_HEIGHT))\n",
-    "\n",
-    "    return screen\n",
+    "    return grab_screen(region=(0, 31, GAME_WIDTH, GAME_HEIGHT+31))    # 游戏最上面31像素是白色边框\n",
     "~~~"
    ]
   },
@@ -70,7 +64,7 @@
    "source": [
     "# 运行以下代码，就会抓取当前的屏幕图像\n",
     "import cv2\n",
-    "from pysekiro.grab_screen import get_screen\n",
+    "from pysekiro.img_tools.grab_screen import get_screen\n",
     "\n",
     "screen = get_screen()\n",
     "cv2.imshow('screen', screen)\n",
@@ -91,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_vertices.py)"
+    "查看代码 [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/get_vertices.py)"
    ]
   },
   {
@@ -138,9 +132,13 @@
    "source": [
     "# 参照着上面的演示自己试一下\n",
     "import cv2\n",
-    "from pysekiro.get_vertices import get_xywh\n",
     "\n",
-    "img = cv2.imread(\"demo.png\")\n",
+    "from pysekiro.img_tools.get_vertices import get_xywh\n",
+    "\n",
+    "# 抓取当前屏幕显示的图像来试验\n",
+    "from pysekiro.img_tools.grab_screen import get_screen\n",
+    "img = get_screen()\n",
+    "\n",
     "get_xywh(img)"
    ]
   },
@@ -155,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [get_status.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_status.py)"
+    "查看代码 [get_status.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/img_tools/get_status.py)"
    ]
   },
   {
@@ -171,101 +169,57 @@
    "source": [
     "要获取的状态有：自身生命，自身架势，目标生命，目标架势。  \n",
     "- 获取方法\n",
-    "    1. 靠 [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_vertices.py) 把状态所在图像的位置抠出来（得到x, x_w, y, y_h）。\n",
-    "    2. 选取ROI区域（例如生命值所在的图像），进行颜色通道分离，取R(Red)通道的图像，然后用图像阈值处理（cv2.threshold）保留红色部分，去除其他部分。\n",
-    "    3. 将红色部分量化"
+    "    1. 靠上面 **1.2顶点位置获取** 把状态所在图像的位置抠出来（得到x, x_w, y, y_h）。\n",
+    "    2. 选取ROI区域（例如生命值所在的图像），进行颜色通道分离，取某颜色通道的图像，然后对图像进行处理。\n",
+    "    3. 量化"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 生命值的获取\n",
-    "    1. 截取图像中生命值的区域\n",
-    "    2. 由于剩余生命值部分呈红色，所以进行颜色通道分离，取R(Red)通道的图像\n",
-    "    3. 通过观察发现，剩余生命值部分的像素点的值全部高于某个值，所以用图像阈值处理，将像素点值低于这个值的设置为0\n",
-    "    4. 处理完毕，获取数值\n",
-    "- **注意：目前设置的阈值不是最优的，但获取正常数值的稳定性较高，所以暂时使用这个阈值。如果未来发现更合适的阈值，可能会更改此阈值**\n",
+    "### 1.3.1 生命值的获取"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 截取图像中生命值的区域\n",
+    "2. ~~由于剩余生命值部分呈红色，所以进行颜色通道分离，取R(Red)通道的图像~~\n",
+    "2. 打脸，竟然是G(Green)通道的图像能准确获取数值\n",
+    "3. 通过观察发现，剩余生命值部分的像素点的值集中在一个范围，所以用图像阈值处理，将像素值不在范围内的点的值的设置为0\n",
+    "4. 处理完毕，获取数值\n",
     "\n",
     "~~~python\n",
     "# 获取自身生命\n",
     "def get_Self_HP(img):\n",
-    "    img_roi = roi(img, x=29, x_w=182, y=246, y_h=246+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=48, x_w=305, y=409, y_h=409+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    \n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    r = r[0]\n",
-    "    retval, img_th = cv2.threshold(r, 100, 255, cv2.THRESH_TOZERO)           # 图像阈值处理，像素点的值低于100的设置为0\n",
-    "    img_th = np.reshape(img_th, r.shape)\n",
+    "    \n",
+    "    retval, img_th = cv2.threshold(g, 50, 255, cv2.THRESH_TOZERO)              # 图像阈值处理，像素点的值低于50的设置为0\n",
+    "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
+    "    \n",
     "    Self_HP = get_value(img_th)    # 获取数值\n",
-    "    # print('\\n', img_th)\n",
-    "    # print(Self_HP)\n",
+    "    \n",
     "    return Self_HP\n",
     "\n",
-    "# 获取目标生命  \n",
+    "# 获取目标生命\n",
     "def get_Target_HP(img):\n",
-    "    img_roi = roi(img, x=29, x_w=130, y=25, y_h=25+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    img_roi = roi(img, x=48, x_w=216, y=41, y_h=41+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    \n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    r = r[0]\n",
-    "    retval, img_th = cv2.threshold(r, 80, 255, cv2.THRESH_TOZERO)           # 图像阈值处理，像素点的值低于80的设置为0\n",
-    "    img_th = np.reshape(img_th, r.shape)\n",
+    "    \n",
+    "    retval, img_th = cv2.threshold(g, 25, 255, cv2.THRESH_TOZERO)             # 图像阈值处理，像素点的值低于25的设置为0\n",
+    "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
+    "    \n",
     "    Target_HP = get_value(img_th)    # 获取数值\n",
-    "#     print('\\n', img_th)\n",
-    "#     print(Target_HP)\n",
+    "\n",
     "    return Target_HP\n",
-    "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 架势的获取\n",
-    "    - 架势和生命不同，它是从中间开始往两边增加的，但我们没有必要两边都获取，只需要一边就够了，这里我选择的是中间和右边。\n",
-    "    - 还有几个问题比较麻烦，就是架势在归零的时候会不显示，积累到一定时候颜色会变化。设置开启条件后能较稳定的获取数值。\n",
-    "    - 所谓的开启条件，就是架势条中间那条白色的线所在的像素点，当这个像素点满足一定条件时，才处理图像并计算数值。\n",
-    "    - \n",
-    "    1. 截取图像中架势的区域\n",
-    "    2. 由于架势的颜色也是偏向于红色（相比蓝色和绿色），所以进行颜色通道分离，取R(Red)通道的图像\n",
-    "    3. 通过观察发现，架势条中间那条白色的线所在的像素点的值大多集中在某范围内(例如自身架势的白线在架势积累较少时主要集中在 156 ~ 159)，还有 另外一个某范围内(例如自身架势的白线在架势积累较多时主要集中在 244 ~ 248)，将其视为架势条正在显示的标志，触发开启条件。\n",
-    "    4. 同样做图像阈值处理，处理完成后，获取数值\n",
-    "- **注意：目前设置的阈值不是最优的，但获取正常数值的稳定性较高，所以暂时使用这个阈值。如果未来发现更合适的阈值，可能会更改此阈值**\n",
+    "~~~\n",
     "\n",
-    "~~~python\n",
-    "# 获取自身架势\n",
-    "def get_Self_Posture(img):\n",
-    "    img_roi = roi(img, x=240, x_w=290, y=234, y_h=234+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
-    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    r = r[0]\n",
-    "    if 150 < r[0] < 165:    # 开启条件1\n",
-    "        retval, img_th = cv2.threshold(r, 130, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于130的设置为0\n",
-    "        img_th = np.reshape(img_th, r.shape)\n",
-    "        Self_Posture = get_value(img_th)\n",
-    "    elif r[0] > 200:    # 开启条件2\n",
-    "        retval, img_th = cv2.threshold(r, 200, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于200的设置为0\n",
-    "        img_th = np.reshape(img_th, r.shape)\n",
-    "        Self_Posture = get_value(img_th)\n",
-    "    else:\n",
-    "        img_th = None\n",
-    "        Self_Posture = 0\n",
-    "    # print('\\n', img_th)\n",
-    "    # print(Self_Posture)\n",
-    "    return Self_Posture\n",
-    "\n",
-    "# 获取目标架势\n",
-    "def get_Target_Posture(img):\n",
-    "    img_roi = roi(img, x=240, x_w=327, y=17, y_h=17+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
-    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    r = r[0]\n",
-    "    if r[0] > 180:    # 开启条件1\n",
-    "        retval, img_th = cv2.threshold(r, 140, 255, cv2.THRESH_TOZERO)    # 图像阈值处理，像素点的值低于140的设置为0\n",
-    "        img_th = np.reshape(img_th, r.shape)\n",
-    "        Target_Posture = get_value(img_th)\n",
-    "    else:\n",
-    "        img_th = None\n",
-    "        Target_Posture = 0\n",
-    "    # print('\\n', img_th)\n",
-    "    # print(Target_Posture)\n",
-    "    return Target_Posture\n",
-    "~~~"
+    "![demo_get_Self_HP.gif](https://github.com/ricagj/pysekiro/blob/main/imgs/demo_get_Self_HP.gif?raw=true)"
    ]
   },
   {
@@ -296,6 +250,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.3.2 架势的获取"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "（参考CSDN上的[OpenCV-Python教程（8、Canny边缘检测）](https://blog.csdn.net/sunny2038/article/details/9202641)）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 架势和生命不同，它是从中间开始往两边增加的，但我们没有必要两边都获取，只需要一边就够了，这里我选择的是中间和右边。\n",
+    "- 还有几个问题比较麻烦，就是架势在归零的时候会不显示，积累到一定时候颜色会变化。\n",
+    "- 不过好在架势出现时中间有条白线，其像素点的值也集中在一定范围。所以要是这点的值进入这个范围，就判断为架势开始积累了\n",
+    "- 架势出现后，通过Canny边缘检测找到架势的边缘\n",
+    "- 量化"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 旧版\n",
+    "    1. ~~截取图像中架势的区域~~\n",
+    "    2. ~~由于架势的颜色也是偏向于红色（相比蓝色和绿色），所以进行颜色通道分离，取R(Red)通道的图像~~\n",
+    "    3. ~~通过观察发现，架势条中间那条白色的线所在的像素点的值大多集中在某范围内(例如自身架势的白线在架势积累较少时主要集中在 156 ~ 159)，还有 另外一个某范围内(例如自身架势的白线在架势积累较多时主要集中在 244 ~ 248)，将其视为架势条正在显示的标志，触发开启条件。~~\n",
+    "    4. ~~同样做图像阈值处理，处理完成后，获取数值~~\n",
+    "- 新版\n",
+    "    1. 截取图像中架势的区域\n",
+    "    2. 进行颜色通道分离，取R(Red)通道的图像\n",
+    "    3. while_line（白线，准确的说应该是白点。）出现后才开始边缘检测"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~~~python\n",
+    "# 获取自身架势\n",
+    "def get_Self_Posture(img):\n",
+    "    img_roi = roi(img, x=401, x_w=490, y=389, y_h=389+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
+    "    \n",
+    "    white_line = r[0][0]\n",
+    "    if 155 < white_line < 170 or white_line > 250:\n",
+    "        canny = cv2.Canny(cv2.GaussianBlur(r,(3,3),0), 0, 100)    # Canny边缘检测\n",
+    "        Self_Posture =  np.argmax(canny)\n",
+    "    else:\n",
+    "        Self_Posture = 0\n",
+    "    \n",
+    "    return Self_Posture\n",
+    "\n",
+    "# up to data\n",
+    "# 获取目标架势\n",
+    "def get_Target_Posture(img):\n",
+    "    img_roi = roi(img, x=401, x_w=553, y=29, y_h=29+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
+    "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
+    "    \n",
+    "    white_line = r[0][0]\n",
+    "    if white_line > 190:\n",
+    "        canny = cv2.Canny(cv2.GaussianBlur(r,(3,3),0), 0, 100)    # Canny边缘检测\n",
+    "        Target_Posture =  np.argmax(canny)\n",
+    "    else:\n",
+    "        Target_Posture = 0\n",
+    "    \n",
+    "    return Target_Posture\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2 按键部分\n",
     "- get_keys.py (捕获键盘的按键)\n",
     "- direct_keys.py (控制键盘的按键)\n",
@@ -313,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [get_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_keys.py)"
+    "查看代码 [get_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/key_tools/get_keys.py)"
    ]
   },
   {
@@ -338,19 +368,6 @@
     "~~~python\n",
     "# virtual keys\n",
     "vk = {\n",
-    "    'W' : 0x57,\n",
-    "    'S' : 0x53,\n",
-    "    'A' : 0x41,\n",
-    "    'D' : 0x44,\n",
-    "    'LSHIFT' : 0xA0,\n",
-    "    'SPACE'  : 0x20,\n",
-    "\n",
-    "    'J' : 0x4A,\n",
-    "    # 'LCONTROL' : 0xA2,\n",
-    "    'K' : 0x4B,\n",
-    "    #'F' : 0x46,\n",
-    "    'R' : 0x52,\n",
-    "\n",
     "    'T' : 0x54,\n",
     "    'P' : 0x50\n",
     "}\n",
@@ -372,32 +389,11 @@
     "~~~python\n",
     "def key_check():\n",
     "    keys = []\n",
-    "    for key in ['W', 'S', 'A', 'D', 'LSHIFT', 'SPACE', 'J', 'K', 'R', 'T', 'P']:\n",
+    "    for key in ['T', 'P']:\n",
     "        if wapi.GetAsyncKeyState(vk[key]):\n",
     "            keys.append(key)\n",
     "    return keys\n",
     "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "可以运行以下代码体验一下，按 P 停止"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pysekiro.get_keys import key_check\n",
-    "while True:\n",
-    "    keys = key_check()\n",
-    "    print(f'\\r{str(keys):<64}', end = '')\n",
-    "    if 'P' in keys:\n",
-    "        break"
    ]
   },
   {
@@ -411,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [direct_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/direct_keys.py)"
+    "查看代码 [direct_keys.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/key_tools/direct_keys.py)"
    ]
   },
   {
@@ -448,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "查看代码 [actions.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/actions.py)"
+    "查看代码 [actions.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/key_tools/actions.py)"
    ]
   },
   {
@@ -497,10 +493,7 @@
     "    # 'Y' : 0x15,\n",
     "\n",
     "    'J' : 0x24,\n",
-    "    # 'LCONTROL' : 0x1D,\n",
     "    'K' : 0x25,\n",
-    "    # 'F' : 0x21,\n",
-    "    'R' : 0x13,\n",
     "}\n",
     "~~~"
    ]
@@ -548,8 +541,7 @@
    "metadata": {},
    "source": [
     "~~~python\n",
-    "# 根据 collect_data.py 中的 get_output()\n",
-    "def act(action):\n",
+    "def act(action=4, WS=2, AD=2):\n",
     "    \n",
     "    if   action == 0:\n",
     "        act = Attack       # 攻击\n",
@@ -559,11 +551,10 @@
     "        act = Step_Dodge   # 垫步\n",
     "    elif action == 3:\n",
     "        act = Jump         # 跳跃\n",
-    "    elif action == 4:\n",
-    "        act = NOKEY        # 无键\n",
-    "\n",
-    "    act_process = threading.Thread(target=act)\n",
-    "    act_process.start()\n",
+    "    else:\n",
+    "        act = NOKEY        # 无键, 无动作\n",
+    "    \n",
+    "    act()\n",
     "~~~"
    ]
   }
