--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -195,27 +195,35 @@
     "# 获取自身生命\n",
     "def get_Self_HP(img):\n",
     "    img_roi = roi(img, x=48, x_w=305, y=409, y_h=409+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
-    "    \n",
+    "\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    \n",
+    "\n",
     "    retval, img_th = cv2.threshold(g, 50, 255, cv2.THRESH_TOZERO)              # 图像阈值处理，像素点的值低于50的设置为0\n",
     "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
-    "    \n",
-    "    Self_HP = get_value(img_th)    # 获取数值\n",
-    "    \n",
+    "\n",
+    "    target_img = img_th[0]\n",
+    "    if 0 in target_img:\n",
+    "        Self_HP = np.argmin(target_img)\n",
+    "    else:\n",
+    "        Self_HP = len(target_img)\n",
+    "\n",
     "    return Self_HP\n",
     "\n",
     "# 获取目标生命\n",
     "def get_Target_HP(img):\n",
     "    img_roi = roi(img, x=48, x_w=216, y=41, y_h=41+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
-    "    \n",
+    "\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    \n",
+    "\n",
     "    retval, img_th = cv2.threshold(g, 25, 255, cv2.THRESH_TOZERO)             # 图像阈值处理，像素点的值低于25的设置为0\n",
     "    retval, img_th = cv2.threshold(img_th, 70, 255, cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于70的设置为0\n",
-    "    \n",
-    "    Target_HP = get_value(img_th)    # 获取数值\n",
     "\n",
+    "    target_img = img_th[0]\n",
+    "    if 0 in target_img:\n",
+    "        Target_HP = np.argmin(target_img)\n",
+    "    else:\n",
+    "        Target_HP = len(target_img)\n",
+    "    \n",
     "    return Target_HP\n",
     "~~~\n",
     "\n",
@@ -232,18 +240,7 @@
     "    - 在传入函数前， **target_img** 已经做过图像阈值处理，就是范围外的像素点处理成 0 了，所以计算从左数第一个出现的0的左边有多少个保留值，得到的结果就是我们需要的那个状态值\n",
     "        - e.g. \\[113, 113, 113, 115, 116, 110, 0, 0, 231, 0\\] 计算结果为 6\n",
     "        - e.g. \\[0, 113, 123, 123, 105, 0, 0, 142, 115, 111\\] 计算结果为 0\n",
-    "        - e.g. \\[113, 0, 123, 123, 105, 0, 0, 142, 115, 111\\] 计算结果为 1\n",
-    "\n",
-    "~~~python\n",
-    "def get_value(target_img):\n",
-    "    count = 0\n",
-    "    for i in range(len(target_img)-1):\n",
-    "        cur_pixel = int(target_img[i])\n",
-    "        if cur_pixel == 0:\n",
-    "            break\n",
-    "        count += 1\n",
-    "    return count\n",
-    "~~~"
+    "        - e.g. \\[113, 0, 123, 123, 105, 0, 0, 142, 115, 111\\] 计算结果为 1"
    ]
   },
   {
@@ -295,29 +292,34 @@
     "def get_Self_Posture(img):\n",
     "    img_roi = roi(img, x=401, x_w=490, y=389, y_h=389+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    \n",
+    "\n",
     "    white_line = r[0][0]\n",
     "    if 155 < white_line < 170 or white_line > 250:\n",
     "        canny = cv2.Canny(cv2.GaussianBlur(r,(3,3),0), 0, 100)    # Canny边缘检测\n",
     "        Self_Posture =  np.argmax(canny)\n",
     "    else:\n",
     "        Self_Posture = 0\n",
-    "    \n",
+    "\n",
+    "    if white_line > 250 and Self_Posture < 10:    # 防止满架势却读取为 0\n",
+    "        Self_Posture == len(canny)\n",
+    "\n",
     "    return Self_Posture\n",
     "\n",
-    "# up to data\n",
     "# 获取目标架势\n",
     "def get_Target_Posture(img):\n",
     "    img_roi = roi(img, x=401, x_w=553, y=29, y_h=29+1)    # x, x_w, y, y_h 获取自 get_vertices.py\n",
     "    b, g ,r =cv2.split(img_roi)    # 颜色通道分离\n",
-    "    \n",
+    "\n",
     "    white_line = r[0][0]\n",
     "    if white_line > 190:\n",
     "        canny = cv2.Canny(cv2.GaussianBlur(r,(3,3),0), 0, 100)    # Canny边缘检测\n",
     "        Target_Posture =  np.argmax(canny)\n",
     "    else:\n",
     "        Target_Posture = 0\n",
-    "    \n",
+    "\n",
+    "    if white_line > 250 and Target_Posture < 10:    # 防止满架势却读取为 0\n",
+    "        Target_Posture == len(canny)\n",
+    "\n",
     "    return Target_Posture\n",
     "~~~"
    ]
@@ -490,7 +492,7 @@
     "    'LSHIFT' : 0x2A,\n",
     "    'SPACE'  : 0x39,\n",
     "\n",
-    "    # 'Y' : 0x15,\n",
+    "    'Y' : 0x15,\n",
     "\n",
     "    'J' : 0x24,\n",
     "    'K' : 0x25,\n",
