New version. < Conv3D >

--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -191,6 +191,9 @@
     "3. 通过观察发现，剩余生命值部分的像素点的值集中在一个范围，所以用图像阈值处理，将像素值不在范围内的点的值的设置为0\n",
     "4. 处理完毕，获取数值\n",
     "\n",
+    "获取数值这部分比较简单，因为剩余生命值和已失去的生命值之间有一条白色的线隔着，它刚好会被图像阈值处理成0，所以，0所在列表的下标，就是生命值。  \n",
+    "不过有个问题要注意，就是满生命值时白线在最右边，不在检测范围内，所以此时 target_img 内没有0，这个时候用 np.argmin() 取数值就会出大问题。所以在检测不到0时就将生命值直接设置成满生命值。\n",
+    "\n",
     "~~~python\n",
     "# 获取自身生命\n",
     "def get_Self_HP(img):\n",
@@ -228,19 +231,6 @@
     "~~~\n",
     "\n",
     "![demo_get_Self_HP.gif](https://github.com/ricagj/pysekiro/blob/main/imgs/demo_get_Self_HP.gif?raw=true)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 获取数值\n",
-    "    - 我们所看到的那条生命值还有架势，是有一定宽度的，读取了图像数据之后就是一个有多行数据的数组，但我们在计算的时候不需要那么多行，毕竟每行的数据其实都是差不多的，所以选取其中一行数据就可以了\n",
-    "    - 下面 get_value(target_img) 中的参数 **target_img** 就是这其中的一行数据，也是所谓的一维数组。\n",
-    "    - 在传入函数前， **target_img** 已经做过图像阈值处理，就是范围外的像素点处理成 0 了，所以计算从左数第一个出现的0的左边有多少个保留值，得到的结果就是我们需要的那个状态值\n",
-    "        - e.g. \\[113, 113, 113, 115, 116, 110, 0, 0, 231, 0\\] 计算结果为 6\n",
-    "        - e.g. \\[0, 113, 123, 123, 105, 0, 0, 142, 115, 111\\] 计算结果为 0\n",
-    "        - e.g. \\[113, 0, 123, 123, 105, 0, 0, 142, 115, 111\\] 计算结果为 1"
    ]
   },
   {
@@ -519,7 +509,7 @@
     "# 然后按照下面的示例定义执行相应动作的函数 \n",
     "def Move_Forward():    # 移动 前\n",
     "    PressKey(dk['W'])      # 压键\n",
-    "    time.sleep(0.1)    # 按键时长（控制长按短按）\n",
+    "    time.sleep(0.01)    # 按键时长（控制长按短按）\n",
     "    ReleaseKey(dk['W'])    # 松键\n",
     "~~~"
    ]
